--- a/notebooks/pYPKa_ZE_RPL35B.ipynb
+++ b/notebooks/pYPKa_ZE_RPL35B.ipynb
@@ -705,6 +705,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python [conda env:bjorn37]",
+   "language": "python",
+   "name": "conda-env-bjorn37-py"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -715,7 +720,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
