--- a/notebooks/pYPKa_ZE_RPS19a.ipynb
+++ b/notebooks/pYPKa_ZE_RPS19a.ipynb
@@ -214,8 +214,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fp,rp = parse_primers(\"\"\">538_ScRPS19atpr_FspA\n",
-    "                         gcgcatGTTAACTGAAATGAAAATTT\n",
+    "fp,rp = parse_primers(\"\"\">652_ScRPS19atpf2\n",
+    "                         ttaaatGTTAACTGAAATGAAAATTT\n",
     "                         >651_ScRPS19atpr_PacI\n",
     "                         taattaaTTTTACTCTATTTGTCGATC\"\"\")"
    ]
@@ -282,7 +282,7 @@
        "      5GTTAACTGAAATGAAAATTT...GATCGACAAATAGAGTAAAA3\n",
        "                              |||||||||||||||||||| tm 48.5 (dbd) 52.8\n",
        "                             3CTAGCTGTTTATCTCATTTTaattaat5\n",
-       "5gcgcatGTTAACTGAAATGAAAATTT3\n",
+       "5ttaaatGTTAACTGAAATGAAAATTT3\n",
        "       |||||||||||||||||||| tm 46.0 (dbd) 51.8\n",
        "      3CAATTGACTTTACTTTTAAA...CTAGCTGTTTATCTCATTTT5"
       ]
@@ -316,8 +316,8 @@
        "95.0°C    |95.0°C                 |      |Tm formula: Biopython Tm_NN\n",
        "|_________|_____          72.0°C  |72.0°C|SaltC 50mM\n",
        "| 03min00s|30s  \\         ________|______|Primer1C 1.0µM\n",
-       "|         |      \\ 49.6°C/ 0min17s| 5min |Primer2C 1.0µM\n",
-       "|         |       \\_____/         |      |GC 33%\n",
+       "|         |      \\ 49.4°C/ 0min17s| 5min |Primer2C 1.0µM\n",
+       "|         |       \\_____/         |      |GC 32%\n",
        "|         |         30s           |      |4-12°C"
       ]
      },
@@ -564,31 +564,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "l97SuXHlcPY5ZlH2j3JPae6zSO0\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(pYPKa_Z_RPS19a.cseguid())\n",
-    "assert pYPKa_Z_RPS19a.cseguid() == \"l97SuXHlcPY5ZlH2j3JPae6zSO0\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "pYPKa_E_RPS19a.cseguid() should be wlaJuzCcEjoyBetJWiFvodID2yw"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [
@@ -596,13 +571,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wlaJuzCcEjoyBetJWiFvodID2yw\n"
+      "X6BxAcX4KUzScMcGb0RyNvAWwCc\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pYPKa_Z_RPS19a.cseguid())\n",
+    "assert pYPKa_Z_RPS19a.cseguid() == \"X6BxAcX4KUzScMcGb0RyNvAWwCc\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pYPKa_E_RPS19a.cseguid() should be X6BxAcX4KUzScMcGb0RyNvAWwCc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DxlDnby_v4TXT2ecK1SKMKQDbIQ\n"
      ]
     }
    ],
    "source": [
     "print(pYPKa_E_RPS19a.cseguid())\n",
-    "assert pYPKa_E_RPS19a.cseguid() == \"wlaJuzCcEjoyBetJWiFvodID2yw\""
+    "assert pYPKa_E_RPS19a.cseguid() == \"DxlDnby_v4TXT2ecK1SKMKQDbIQ\""
    ]
   },
   {
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,16 +632,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "cSEGUID_wlaJuzCcEjoyBetJWiFvodID2yw"
+       "cSEGUID_DxlDnby_v4TXT2ecK1SKMKQDbIQ"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,13 +660,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<font face=monospace><a href='pYPKa_Z_RPS19a.gb' target='_blank'>pYPKa_Z_RPS19a.gb</a></font><br>"
+       "<font color='DarkOrange ' face=monospace>Sequence changed.<br></font><font color='red' face=monospace>new: <a href='pYPKa_Z_RPS19a.gb' target='_blank'>pYPKa_Z_RPS19a.gb</a> &nbsp&nbsp&nbsp size: 3685bp topology: o SEGUID: d9L0eHwdPO4dgjKWvT1KpXw-l-I<br></font><font color='green' face=monospace>old: <a href='pYPKa_Z_RPS19a_OLD.gb' target='_blank'>pYPKa_Z_RPS19a_OLD.gb</a> size: 3685bp topology: o SEGUID: GEVOoDxUavd-5-vZu-z0V1V1LPY<br></font>"
       ]
      },
      "metadata": {},
@@ -686,13 +686,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<font face=monospace><a href='pYPKa_E_RPS19a.gb' target='_blank'>pYPKa_E_RPS19a.gb</a></font><br>"
+       "<font color='DarkOrange ' face=monospace>Sequence changed.<br></font><font color='red' face=monospace>new: <a href='pYPKa_E_RPS19a.gb' target='_blank'>pYPKa_E_RPS19a.gb</a> &nbsp&nbsp&nbsp size: 3685bp topology: o SEGUID: WZha_-PB4fjzS9nszwDyQaa2ZAg<br></font><font color='green' face=monospace>old: <a href='pYPKa_E_RPS19a_OLD.gb' target='_blank'>pYPKa_E_RPS19a_OLD.gb</a> size: 3685bp topology: o SEGUID: XUnUYZhG_3R-_iwwtP2_5tDhWFE<br></font>"
       ]
      },
      "metadata": {},
@@ -702,9 +702,21 @@
    "source": [
     "pYPKa_E_RPS19a.write(\"pYPKa_E_RPS19a.gb\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python [conda env:bjorn37]",
+   "language": "python",
+   "name": "conda-env-bjorn37-py"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -715,9 +727,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
