--- a/notebooks/pYPKa_ZE_UTR2.ipynb
+++ b/notebooks/pYPKa_ZE_UTR2.ipynb
@@ -705,6 +705,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python [conda env:bjorn37]",
+   "language": "python",
+   "name": "conda-env-bjorn37-py"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -715,9 +720,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
